
add_library(slist OBJECT
    slist_end.c
    slist_erase.c
    slist_find.c
    slist_insert_after.c
    slist_insert_before.c
    slist_pop_back.c
    slist_prev.c
    slist_push_back.c
    slist_remove.c
    slist_reverse.c
    slist_size.c
    slist_sort.c
    slist_swap.c
    slist_unique.c
    )
